parser.output
Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_CMD: TM_VAR NT_DECL_LIST_VAR
    3       | TM_ARRAY NT_DECL_LIST_ARRAY
    4       | NT_CMD TM_SEMICOL NT_CMD
    5       | TM_IF NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    6       | TM_WHILE NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    7       | TM_WI TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
    8       | TM_WC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    9 NT_EXPR_2: TM_NAT
   10          | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   11          | TM_IDENT TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET
   12          | TM_CHAR
   13          | TM_STRING
   14          | TM_IDENT
   15          | TM_RI TM_LEFT_PAREN TM_RIGHT_PAREN
   16          | TM_RC TM_LEFT_PAREN TM_RIGHT_PAREN
   17          | TM_MALLOC TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   18          | TM_NOT NT_EXPR_2
   19          | TM_MINUS NT_EXPR_2

   20 NT_EXPR: NT_EXPR_2
   21        | NT_EXPR TM_MUL NT_EXPR
   22        | NT_EXPR TM_PLUS NT_EXPR
   23        | NT_EXPR TM_MINUS NT_EXPR
   24        | NT_EXPR TM_DIV NT_EXPR
   25        | NT_EXPR TM_MOD NT_EXPR
   26        | NT_EXPR TM_LT NT_EXPR
   27        | NT_EXPR TM_GT NT_EXPR
   28        | NT_EXPR TM_LE NT_EXPR
   29        | NT_EXPR TM_GE NT_EXPR
   30        | NT_EXPR TM_EQ NT_EXPR
   31        | NT_EXPR TM_NE NT_EXPR
   32        | NT_EXPR TM_AND NT_EXPR
   33        | NT_EXPR TM_OR NT_EXPR

   34 NT_EXPR_LIST: NT_EXPR
   35             | NT_EXPR TM_COMMA NT_EXPR_LIST

   36 NT_DECL_VAR: TM_IDENT
   37            | TM_IDENT TM_ASGNOP NT_EXPR

   38 NT_DECL_ARRAY: TM_IDENT TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET
   39              | TM_IDENT TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET TM_ASGNOP TM_LEFT_BRACE NT_EXPR_LIST TM_RIGHT_BRACE
   40              | TM_IDENT TM_ASGNOP TM_STRING

   41 NT_DECL_LIST_VAR: NT_DECL_VAR
   42                 | NT_DECL_VAR TM_COMMA NT_DECL_LIST_VAR

   43 NT_DECL_LIST_ARRAY: NT_DECL_ARRAY
   44                   | NT_DECL_ARRAY TM_COMMA NT_DECL_LIST_ARRAY


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TM_NAT <n> (258) 9 38 39
    TM_IDENT <i> (259) 11 14 36 37 38 39 40
    TM_CHAR <i> (260) 12
    TM_STRING <i> (261) 13 40
    TM_LEFT_BRACE <none> (262) 5 6 39
    TM_RIGHT_BRACE <none> (263) 5 6 39
    TM_LEFT_BRACKET <none> (264) 11 38 39
    TM_RIGHT_BRACKET <none> (265) 11 38 39
    TM_LEFT_PAREN <none> (266) 7 8 10 15 16 17
    TM_RIGHT_PAREN <none> (267) 7 8 10 15 16 17
    TM_SEMICOL <none> (268) 4
    TM_COMMA <none> (269) 35 42 44
    TM_MALLOC <none> (270) 17
    TM_RI <none> (271) 15
    TM_RC <none> (272) 16
    TM_WI <none> (273) 7
    TM_WC <none> (274) 8
    TM_VAR <none> (275) 2
    TM_ARRAY <none> (276) 3
    TM_IF <none> (277) 5
    TM_THEN <none> (278) 5
    TM_ELSE <none> (279) 5
    TM_WHILE <none> (280) 6
    TM_DO <none> (281) 6
    TM_ASGNOP <none> (282) 37 39 40
    TM_OR <none> (283) 33
    TM_AND <none> (284) 32
    TM_NOT <none> (285) 18
    TM_LT <none> (286) 26
    TM_LE <none> (287) 28
    TM_GT <none> (288) 27
    TM_GE <none> (289) 29
    TM_EQ <none> (290) 30
    TM_NE <none> (291) 31
    TM_PLUS <none> (292) 22
    TM_MINUS <none> (293) 19 23
    TM_MUL <none> (294) 21
    TM_DIV <none> (295) 24
    TM_MOD <none> (296) 25


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    NT_WHOLE <c> (43)
        on left: 1
        on right: 0
    NT_CMD <c> (44)
        on left: 2 3 4 5 6 7 8
        on right: 1 4 5 6
    NT_EXPR_2 <e> (45)
        on left: 9 10 11 12 13 14 15 16 17 18 19
        on right: 18 19 20
    NT_EXPR <e> (46)
        on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33
        on right: 5 6 7 8 10 11 17 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 37
    NT_EXPR_LIST <es> (47)
        on left: 34 35
        on right: 35 39
    NT_DECL_VAR <cs> (48)
        on left: 36 37
        on right: 41 42
    NT_DECL_ARRAY <cs> (49)
        on left: 38 39 40
        on right: 43 44
    NT_DECL_LIST_VAR <cs> (50)
        on left: 41 42
        on right: 2 42
    NT_DECL_LIST_ARRAY <cs> (51)
        on left: 43 44
        on right: 3 44


State 0

    0 $accept: • NT_WHOLE $end

    TM_WI     shift, and go to state 1
    TM_WC     shift, and go to state 2
    TM_VAR    shift, and go to state 3
    TM_ARRAY  shift, and go to state 4
    TM_IF     shift, and go to state 5
    TM_WHILE  shift, and go to state 6

    NT_WHOLE  go to state 7
    NT_CMD    go to state 8


State 1

    7 NT_CMD: TM_WI • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 9


State 2

    8 NT_CMD: TM_WC • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 10


State 3

    2 NT_CMD: TM_VAR • NT_DECL_LIST_VAR

    TM_IDENT  shift, and go to state 11

    NT_DECL_VAR       go to state 12
    NT_DECL_LIST_VAR  go to state 13


State 4

    3 NT_CMD: TM_ARRAY • NT_DECL_LIST_ARRAY

    TM_IDENT  shift, and go to state 14

    NT_DECL_ARRAY       go to state 15
    NT_DECL_LIST_ARRAY  go to state 16


State 5

    5 NT_CMD: TM_IF • NT_EXPR TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 28


State 6

    6 NT_CMD: TM_WHILE • NT_EXPR TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 29


State 7

    0 $accept: NT_WHOLE • $end

    $end  shift, and go to state 30


State 8

    1 NT_WHOLE: NT_CMD •
    4 NT_CMD: NT_CMD • TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 31

    $default  reduce using rule 1 (NT_WHOLE)


State 9

    7 NT_CMD: TM_WI TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 32


State 10

    8 NT_CMD: TM_WC TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 33


State 11

   36 NT_DECL_VAR: TM_IDENT •
   37            | TM_IDENT • TM_ASGNOP NT_EXPR

    TM_ASGNOP  shift, and go to state 34

    $default  reduce using rule 36 (NT_DECL_VAR)


State 12

   41 NT_DECL_LIST_VAR: NT_DECL_VAR •
   42                 | NT_DECL_VAR • TM_COMMA NT_DECL_LIST_VAR

    TM_COMMA  shift, and go to state 35

    $default  reduce using rule 41 (NT_DECL_LIST_VAR)


State 13

    2 NT_CMD: TM_VAR NT_DECL_LIST_VAR •

    $default  reduce using rule 2 (NT_CMD)


State 14

   38 NT_DECL_ARRAY: TM_IDENT • TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET
   39              | TM_IDENT • TM_LEFT_BRACKET TM_NAT TM_RIGHT_BRACKET TM_ASGNOP TM_LEFT_BRACE NT_EXPR_LIST TM_RIGHT_BRACE
   40              | TM_IDENT • TM_ASGNOP TM_STRING

    TM_LEFT_BRACKET  shift, and go to state 36
    TM_ASGNOP        shift, and go to state 37


State 15

   43 NT_DECL_LIST_ARRAY: NT_DECL_ARRAY •
   44                   | NT_DECL_ARRAY • TM_COMMA NT_DECL_LIST_ARRAY

    TM_COMMA  shift, and go to state 38

    $default  reduce using rule 43 (NT_DECL_LIST_ARRAY)


State 16

    3 NT_CMD: TM_ARRAY NT_DECL_LIST_ARRAY •

    $default  reduce using rule 3 (NT_CMD)


State 17

    9 NT_EXPR_2: TM_NAT •

    $default  reduce using rule 9 (NT_EXPR_2)


State 18

   11 NT_EXPR_2: TM_IDENT • TM_LEFT_BRACKET NT_EXPR TM_RIGHT_BRACKET
   14          | TM_IDENT •

    TM_LEFT_BRACKET  shift, and go to state 39

    $default  reduce using rule 14 (NT_EXPR_2)


State 19

   12 NT_EXPR_2: TM_CHAR •

    $default  reduce using rule 12 (NT_EXPR_2)


State 20

   13 NT_EXPR_2: TM_STRING •

    $default  reduce using rule 13 (NT_EXPR_2)


State 21

   10 NT_EXPR_2: TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 40


State 22

   17 NT_EXPR_2: TM_MALLOC • TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 41


State 23

   15 NT_EXPR_2: TM_RI • TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 42


State 24

   16 NT_EXPR_2: TM_RC • TM_LEFT_PAREN TM_RIGHT_PAREN

    TM_LEFT_PAREN  shift, and go to state 43


State 25

   18 NT_EXPR_2: TM_NOT • NT_EXPR_2

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 44


State 26

   19 NT_EXPR_2: TM_MINUS • NT_EXPR_2

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 45


State 27

   20 NT_EXPR: NT_EXPR_2 •

    $default  reduce using rule 20 (NT_EXPR)


State 28

    5 NT_CMD: TM_IF NT_EXPR • TM_THEN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   21 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   22        | NT_EXPR • TM_PLUS NT_EXPR
   23        | NT_EXPR • TM_MINUS NT_EXPR
   24        | NT_EXPR • TM_DIV NT_EXPR
   25        | NT_EXPR • TM_MOD NT_EXPR
   26        | NT_EXPR • TM_LT NT_EXPR
   27        | NT_EXPR • TM_GT NT_EXPR
   28        | NT_EXPR • TM_LE NT_EXPR
   29        | NT_EXPR • TM_GE NT_EXPR
   30        | NT_EXPR • TM_EQ NT_EXPR
   31        | NT_EXPR • TM_NE NT_EXPR
   32        | NT_EXPR • TM_AND NT_EXPR
   33        | NT_EXPR • TM_OR NT_EXPR

    TM_THEN   shift, and go to state 46
    TM_OR     shift, and go to state 47
    TM_AND    shift, and go to state 48
    TM_LT     shift, and go to state 49
    TM_LE     shift, and go to state 50
    TM_GT     shift, and go to state 51
    TM_GE     shift, and go to state 52
    TM_EQ     shift, and go to state 53
    TM_NE     shift, and go to state 54
    TM_PLUS   shift, and go to state 55
    TM_MINUS  shift, and go to state 56
    TM_MUL    shift, and go to state 57
    TM_DIV    shift, and go to state 58
    TM_MOD    shift, and go to state 59


State 29

    6 NT_CMD: TM_WHILE NT_EXPR • TM_DO TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   21 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   22        | NT_EXPR • TM_PLUS NT_EXPR
   23        | NT_EXPR • TM_MINUS NT_EXPR
   24        | NT_EXPR • TM_DIV NT_EXPR
   25        | NT_EXPR • TM_MOD NT_EXPR
   26        | NT_EXPR • TM_LT NT_EXPR
   27        | NT_EXPR • TM_GT NT_EXPR
   28        | NT_EXPR • TM_LE NT_EXPR
   29        | NT_EXPR • TM_GE NT_EXPR
   30        | NT_EXPR • TM_EQ NT_EXPR
   31        | NT_EXPR • TM_NE NT_EXPR
   32        | NT_EXPR • TM_AND NT_EXPR
   33        | NT_EXPR • TM_OR NT_EXPR

    TM_DO     shift, and go to state 60
    TM_OR     shift, and go to state 47
    TM_AND    shift, and go to state 48
    TM_LT     shift, and go to state 49
    TM_LE     shift, and go to state 50
    TM_GT     shift, and go to state 51
    TM_GE     shift, and go to state 52
    TM_EQ     shift, and go to state 53
    TM_NE     shift, and go to state 54
    TM_PLUS   shift, and go to state 55
    TM_MINUS  shift, and go to state 56
    TM_MUL    shift, and go to state 57
    TM_DIV    shift, and go to state 58
    TM_MOD    shift, and go to state 59


State 30

    0 $accept: NT_WHOLE $end •

    $default  accept


State 31

    4 NT_CMD: NT_CMD TM_SEMICOL • NT_CMD

    TM_WI     shift, and go to state 1
    TM_WC     shift, and go to state 2
    TM_VAR    shift, and go to state 3
    TM_ARRAY  shift, and go to state 4
    TM_IF     shift, and go to state 5
    TM_WHILE  shift, and go to state 6

    NT_CMD  go to state 61


State 32

    7 NT_CMD: TM_WI TM_LEFT_PAREN NT_EXPR • TM_RIGHT_PAREN
   21 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   22        | NT_EXPR • TM_PLUS NT_EXPR
   23        | NT_EXPR • TM_MINUS NT_EXPR
   24        | NT_EXPR • TM_DIV NT_EXPR
   25        | NT_EXPR • TM_MOD NT_EXPR
   26        | NT_EXPR • TM_LT NT_EXPR
   27        | NT_EXPR • TM_GT NT_EXPR
   28        | NT_EXPR • TM_LE NT_EXPR
   29        | NT_EXPR • TM_GE NT_EXPR
   30        | NT_EXPR • TM_EQ NT_EXPR
   31        | NT_EXPR • TM_NE NT_EXPR
   32        | NT_EXPR • TM_AND NT_EXPR
   33        | NT_EXPR • TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 62
    TM_OR           shift, and go to state 47
    TM_AND          shift, and go to state 48
    TM_LT           shift, and go to state 49
    TM_LE           shift, and go to state 50
    TM_GT           shift, and go to state 51
    TM_GE           shift, and go to state 52
    TM_EQ           shift, and go to state 53
    TM_NE           shift, and go to state 54
    TM_PLUS         shift, and go to state 55
    TM_MINUS        shift, and go to state 56
    TM_MUL          shift, and go to state 57
    TM_DIV          shift, and go to state 58
    TM_MOD          shift, and go to state 59


State 33

    8 NT_CMD: TM_WC TM_LEFT_PAREN NT_EXPR • TM_RIGHT_PAREN
   21 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   22        | NT_EXPR • TM_PLUS NT_EXPR
   23        | NT_EXPR • TM_MINUS NT_EXPR
   24        | NT_EXPR • TM_DIV NT_EXPR
   25        | NT_EXPR • TM_MOD NT_EXPR
   26        | NT_EXPR • TM_LT NT_EXPR
   27        | NT_EXPR • TM_GT NT_EXPR
   28        | NT_EXPR • TM_LE NT_EXPR
   29        | NT_EXPR • TM_GE NT_EXPR
   30        | NT_EXPR • TM_EQ NT_EXPR
   31        | NT_EXPR • TM_NE NT_EXPR
   32        | NT_EXPR • TM_AND NT_EXPR
   33        | NT_EXPR • TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 63
    TM_OR           shift, and go to state 47
    TM_AND          shift, and go to state 48
    TM_LT           shift, and go to state 49
    TM_LE           shift, and go to state 50
    TM_GT           shift, and go to state 51
    TM_GE           shift, and go to state 52
    TM_EQ           shift, and go to state 53
    TM_NE           shift, and go to state 54
    TM_PLUS         shift, and go to state 55
    TM_MINUS        shift, and go to state 56
    TM_MUL          shift, and go to state 57
    TM_DIV          shift, and go to state 58
    TM_MOD          shift, and go to state 59


State 34

   37 NT_DECL_VAR: TM_IDENT TM_ASGNOP • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 64


State 35

   42 NT_DECL_LIST_VAR: NT_DECL_VAR TM_COMMA • NT_DECL_LIST_VAR

    TM_IDENT  shift, and go to state 11

    NT_DECL_VAR       go to state 12
    NT_DECL_LIST_VAR  go to state 65


State 36

   38 NT_DECL_ARRAY: TM_IDENT TM_LEFT_BRACKET • TM_NAT TM_RIGHT_BRACKET
   39              | TM_IDENT TM_LEFT_BRACKET • TM_NAT TM_RIGHT_BRACKET TM_ASGNOP TM_LEFT_BRACE NT_EXPR_LIST TM_RIGHT_BRACE

    TM_NAT  shift, and go to state 66


State 37

   40 NT_DECL_ARRAY: TM_IDENT TM_ASGNOP • TM_STRING

    TM_STRING  shift, and go to state 67


State 38

   44 NT_DECL_LIST_ARRAY: NT_DECL_ARRAY TM_COMMA • NT_DECL_LIST_ARRAY

    TM_IDENT  shift, and go to state 14

    NT_DECL_ARRAY       go to state 15
    NT_DECL_LIST_ARRAY  go to state 68


State 39

   11 NT_EXPR_2: TM_IDENT TM_LEFT_BRACKET • NT_EXPR TM_RIGHT_BRACKET

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 69


State 40

   10 NT_EXPR_2: TM_LEFT_PAREN NT_EXPR • TM_RIGHT_PAREN
   21 NT_EXPR: NT_EXPR • TM_MUL NT_EXPR
   22        | NT_EXPR • TM_PLUS NT_EXPR
   23        | NT_EXPR • TM_MINUS NT_EXPR
   24        | NT_EXPR • TM_DIV NT_EXPR
   25        | NT_EXPR • TM_MOD NT_EXPR
   26        | NT_EXPR • TM_LT NT_EXPR
   27        | NT_EXPR • TM_GT NT_EXPR
   28        | NT_EXPR • TM_LE NT_EXPR
   29        | NT_EXPR • TM_GE NT_EXPR
   30        | NT_EXPR • TM_EQ NT_EXPR
   31        | NT_EXPR • TM_NE NT_EXPR
   32        | NT_EXPR • TM_AND NT_EXPR
   33        | NT_EXPR • TM_OR NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 70
    TM_OR           shift, and go to state 47
    TM_AND          shift, and go to state 48
    TM_LT           shift, and go to state 49
    TM_LE           shift, and go to state 50
    TM_GT           shift, and go to state 51
    TM_GE           shift, and go to state 52
    TM_EQ           shift, and go to state 53
    TM_NE           shift, and go to state 54
    TM_PLUS         shift, and go to state 55
    TM_MINUS        shift, and go to state 56
    TM_MUL          shift, and go to state 57
    TM_DIV          shift, and go to state 58
    TM_MOD          shift, and go to state 59


State 41

   17 NT_EXPR_2: TM_MALLOC TM_LEFT_PAREN • NT_EXPR TM_RIGHT_PAREN

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 71


State 42

   15 NT_EXPR_2: TM_RI TM_LEFT_PAREN • TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 72


State 43

   16 NT_EXPR_2: TM_RC TM_LEFT_PAREN • TM_RIGHT_PAREN

    TM_RIGHT_PAREN  shift, and go to state 73


State 44

   18 NT_EXPR_2: TM_NOT NT_EXPR_2 •

    $default  reduce using rule 18 (NT_EXPR_2)


State 45

   19 NT_EXPR_2: TM_MINUS NT_EXPR_2 •

    $default  reduce using rule 19 (NT_EXPR_2)


State 46

    5 NT_CMD: TM_IF NT_EXPR TM_THEN • TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_BRACE  shift, and go to state 74


State 47

   33 NT_EXPR: NT_EXPR TM_OR • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 75


State 48

   32 NT_EXPR: NT_EXPR TM_AND • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 76


State 49

   26 NT_EXPR: NT_EXPR TM_LT • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 77


State 50

   28 NT_EXPR: NT_EXPR TM_LE • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 78


State 51

   27 NT_EXPR: NT_EXPR TM_GT • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 79


State 52

   29 NT_EXPR: NT_EXPR TM_GE • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 80


State 53

   30 NT_EXPR: NT_EXPR TM_EQ • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 81


State 54

   31 NT_EXPR: NT_EXPR TM_NE • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 82


State 55

   22 NT_EXPR: NT_EXPR TM_PLUS • NT_EXPR

    TM_NAT         shift, and go to state 17
    TM_IDENT       shift, and go to state 18
    TM_CHAR        shift, and go to state 19
    TM_STRING      shift, and go to state 20
    TM_LEFT_PAREN  shift, and go to state 21
    TM_MALLOC      shift, and go to state 22
    TM_RI          shift, and go to state 23
    TM_RC          shift, and go to state 24
    TM_NOT         shift, and go to state 25
    TM_MINUS       shift, and go to state 26

    NT_EXPR_2  go to state 27
    NT_EXPR    go to state 83


State 56

   23 NT_EXPR: NT_EXPR TM_MINUS • NT_EXPR
